--- a/css/aboutMe.css
+++ b/css/aboutMe.css
@@ -32,7 +32,6 @@
 
 .milinkoImg img {
   border-radius: 150px;
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
 }
 
 .aboutmeH2 {
@@ -116,12 +115,14 @@
 
 @media (max-width: 430px) {
   .grid-aboutMe {
+    justify-content: center;
+    align-items: center;
     grid-template-columns: 1fr;
     height: auto;
     padding-top: 40px;
   }
   .milinkoImg img {
-    height: 350px;
+    height: 250px;
   }
   .milinkoImg {
     justify-self: center;
